# silvioweb-browser

./: Cargo.toml  README.md
src/: browser.rs  config_manager.rs  downloads.rs  main.rs  tabs.rs
